--- a/src/main/resources/templates/adoption-contract.html
+++ b/src/main/resources/templates/adoption-contract.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta charset="UTF-8"/>
-  <title>Title</title>
+  <title>Safe Paws</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <meta about="Safe Paws" content="Safe Paws"/>
+  <meta name="author" content="Safe Paws"/>
+  <meta name="description" content="Contrato de Adopción"/>
   <style type="text/css">
     @page {
       margin: 10px 0;
