--- a/src/main/resources/templates/adoption-request.html
+++ b/src/main/resources/templates/adoption-request.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta about="Safe Paws" content="Safe Paws"/>
     <meta name="author" content="Safe Paws"/>
-    <meta name="description" content="Petición de AdopciónZ"/>
+    <meta name="description" content="Petición de Adopción"/>
     <style type="text/css">
         @page {
             margin: 10px 0;
